service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service

spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
